Fixed background not covering page. Added generated content to showcase the size of grid areas.

--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@
 body {
   background-image: linear-gradient(#141d25, #000000);
   background-repeat: no-repeat;
-  box-sizing: border-box;
-  height: 100vh;
+  background-size: cover;
+  height: 100%;
 }
 /* START NAVIGATION */
 nav {
@@ -119,6 +119,10 @@ h1 {
 }
 .full {
   grid-column: full;
+}
+
+.content h2, p{
+  color: white;
 }
 /* END GRID CONFIG */
 
